--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -1020,7 +1020,7 @@
 </style>
 
 <script>
-    const data = "{{category}}";
+    const data = "{{json_category}}";
     console.log(data, "data");
 </script>
 {% endblock content %}
