--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -299,7 +299,7 @@
                         <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
-                                href="{% url 'dashboard' %}"
+                                href="{% url 'orders' %}"
                             >
                                 <span class="sidebar-block__menu-item-icon">
                                     <span class="fas fa-bags-shopping"></span>
