--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -196,8 +196,7 @@
                                     </div>
                                 </div>
                             </div>
-                            {% include 'components/dashboard_leftsidebar.html'
-                            %}
+                            {% include 'components/dashboard_rightformcontainer.html' %}
                         </div>
                     </div>
                 </div>
