added user to orders model

--- a/orders/templates/orders.html
+++ b/orders/templates/orders.html
@@ -392,5 +392,24 @@
         border-bottom-left-radius: 16px;
         border-bottom-right-radius: 16px;
     }
+    .table tbody tr td {
+        font-size: 16px !important;
+        letter-spacing: 0px !important;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 24px;
+        padding-right: 24px;
+        vertical-align: middle;
+        height: 40px;
+        color: #334e6e;
+        background: #ffffff;
+        border-color: #dbd7e8;
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+        border-bottom-color: #dbd7e8;
+    }
+    .table tbody tr:nth-child(odd) td {
+        background: #e4e1ee;
+    }
 </style>
 {% endblock content %}
