--- a/services/templates/services.html
+++ b/services/templates/services.html
@@ -17,7 +17,7 @@
 
                         <div class="container">
                             <!-- search bar -->
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col">
                                     <div
                                         class="
@@ -129,7 +129,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- search bar -->
 
                             <div class="row">
