--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -325,7 +325,7 @@
                         <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
-                                href="/addfunds"
+                                href="{% url 'add_funds' %}"
                             >
                                 <span class="sidebar-block__menu-item-icon">
                                     <span class="fab fa-cc-amazon-pay"></span>
