--- a/orders/templates/add_funds.html
+++ b/orders/templates/add_funds.html
@@ -39,7 +39,7 @@
                                             ></span
                                         >
                                     </p>
-                                    <p class="text-white" >
+                                    <p class="text-white">
                                         <strong style="font-weight: bold"
                                             >Calling on the Paytm Number is not
                                             allowed. Any problem or query will
@@ -265,7 +265,7 @@
                                                             "
                                                         >
                                                             <img
-                                                                src="https://i.imgur.com/pUUU2hZ.jpg"
+                                                                src="/static/images/qr_page-0001.jpeg"
                                                                 style="
                                                                     display: inline-block;
                                                                     width: 546px;
@@ -321,7 +321,7 @@
                                                     >
                                                     <input
                                                         class="form-control"
-                                                        name="AddFoundsForm[fields][transaction_id]"
+                                                        name="order_id"
                                                         value=""
                                                         type="text"
                                                         id="field-transaction_id"
@@ -342,8 +342,9 @@
                                                     <input
                                                         type="number"
                                                         class="form-control"
-                                                        name="AddFoundsForm[amount]"
+                                                        name="amount"
                                                         id="amount"
+                                                        min="10"
                                                         step="0.01"
                                                     />
                                                 </div>
@@ -391,6 +392,7 @@
                                                     <th>Date</th>
                                                     <th>Method</th>
                                                     <th>Amount</th>
+                                                    <th>Status</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
