new user issue fix

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -91,7 +91,8 @@
                                                         >Description</label
                                                     >
                                                     <div
-                                                        class=" form-control panel-description"
+                                                    class=" form-control panel-description"
+                                                    style="height: auto;"
                                                     >
                                                     {% for category in categories %} 
                                                     {% if forloop.first %} 
