account balance added

--- a/dashboard/templates/components/dashboard_herosection.html
+++ b/dashboard/templates/components/dashboard_herosection.html
@@ -102,7 +102,8 @@
                                                 line-height: 36px;
                                             "
                                         >
-                                            1,363.34
+                                        ₹{% get_spent_balance user    %}
+
                                         </div>
                                     </div>
                                     <div
@@ -212,9 +213,9 @@
                                         </div>
                                     </div>
                                     <div
-                                        class="totals-block__card-name"
+                                        class="text-nowrap totals-block__card-name"
                                     >
-                                        <p>Account balance</p>
+                                        <p >Account balance</p>
                                     </div>
                                 </div>
                             </div>
