--- a/orders/templates/add_funds.html
+++ b/orders/templates/add_funds.html
@@ -325,6 +325,8 @@
                                                         value=""
                                                         type="text"
                                                         id="field-transaction_id"
+                                                        required
+
                                                     />
                                                 </div>
                                                 <div class="form-group">
@@ -346,14 +348,11 @@
                                                         id="amount"
                                                         min="10"
                                                         step="0.01"
+                                                        required
                                                     />
                                                 </div>
                                             </div>
-                                            <input
-                                                type="hidden"
-                                                name="_csrf"
-                                                value="UhwefV6SG55E89ryEJ53vPU1t6hWUgGy1cN4kKzOIP0rTiZPFuVD-SC9mIUpqgX7mF_C_zcfLOuMujTE5pwSyg=="
-                                            />
+                                           {% csrf_token %}
                                             <div
                                                 class="component_button_submit"
                                             >
