site ready for production

--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -175,7 +175,7 @@
                                             Child panel
                                         </a>
                                     </li> -->
-                                    <li
+                                    <!-- <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
                                         <a
@@ -191,7 +191,7 @@
                                             </span>
                                             Tickets
                                         </a>
-                                    </li>
+                                    </li> -->
                                     <!-- <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
@@ -221,7 +221,7 @@
                                     </li>
                                 </ul>
                                 <ul class="navbar-nav">
-                                    <li
+                                    <!-- <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
                                         <a
@@ -229,7 +229,7 @@
                                             href="/account"
                                             >Account</a
                                         >
-                                    </li>
+                                    </li> -->
                                     <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
@@ -374,7 +374,7 @@
                                 >
                             </a>
                         </li> -->
-                        <li class="component-sidebar__menu-item">
+                        <!-- <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
                                 href="{% url 'tickets' %}"
@@ -386,7 +386,7 @@
                                     >Tickets</span
                                 >
                             </a>
-                        </li>
+                        </li> -->
                         <!-- <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
