--- a/orders/templates/add_funds.html
+++ b/orders/templates/add_funds.html
@@ -408,6 +408,7 @@
                                                     </td>
                                                     <td>{{transaction.method}}</td>
                                                     <td>{{transaction.amount}}</td>
+                                                    <td>{{transaction.status}}</td>
                                                 </tr>
                                                 {% endfor %}
                                             </tbody>
