updated order and price

--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -78,7 +78,7 @@
                                     >
                                         <a
                                             class="component-navbar-nav-link component-navbar-nav-link__navbar-private"
-                                            href="{% url 'dashboard' %}"
+                                            href="{% url 'orders' %}"
                                         >
                                             <span
                                                 class="component-navbar-nav-link-icon"
